1. IssueActivity UI 구현
2. IssueActivity ViewModel 통신 로직 구현

3. MainActivity에서 Issue Item 클릭 시 IssueActivity 이동 구현

--- a/ThingsflowProject/app/src/main/res/values/colors.xml
+++ b/ThingsflowProject/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#03DAC5</color>
 
     <color name="repo_input_text">#000000</color>
+
+    <color name="activity_issue_nickname">#000000</color>
 </resources>
