--- a/ThingsflowProject/app/src/main/res/values/colors.xml
+++ b/ThingsflowProject/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="repo_input_text">#000000</color>
 
     <color name="activity_issue_nickname">#000000</color>
+
+    <color name="dialog_search_bg">#E1E1E1</color>
+    <color name="dialog_search_btn_text">#000000</color>
 </resources>
